[package]
name = "filereap"
version = "1.0.0"
edition = "2021"
authors = ["Joakim Hulthe <joakim@hulthe.net>"]

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
chrono = "0.4.31"
serde = { version = "1.0.136", features = ["derive"] }
toml = "0.5.11"
log = "0.4.20"
pretty_env_logger = "0.5.0"
eyre = "0.6.8"
color-eyre = "0.6.2"
